--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "element-ui": "^2.13.0",
     "mavon-editor": "^2.7.7",
     "vue": "^2.5.2",
+    "vue-cookie": "^1.1.4",
+    "vue-particle-line": "^0.1.4",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
